src/parser.c
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <stdarg.h>
#include "lexer.h"
#include "ast.h"
#include "parser.h"
#define UNUSED(x) (void)(x)

// Forward declarations for locally defined helpers
static ASTNode* parse_single_comment(Parser* parser);
#include "semantic.h"
#include "logs.h"

void init_parser(Parser* parser, Lexer* lexer) {
	parser->lexer = lexer;
	parser->error = false;
	parser->error_message = NULL;

	parser->current_token.text = NULL;
	parser->peek_token.text = NULL;

	Token* current = next_token(lexer);
	Token* peek = next_token(lexer);

	if (!current || !peek)
	{
		if (current) free_token(current);
		if (peek) free_token(peek);
		set_error(parser, PARSER_INITIALIZATION_FAILURE);
		return;
	}

	// Check for TOKEN_ERROR in initial tokens
	if (current->type == TOKEN_ERROR) {
		char error_msg[256];
		snprintf(error_msg, sizeof(error_msg), "Lexer error at initialization: %s (line %d, column %d)", 
			current->text ? current->text : "unknown error", current->line, current->column);
		free_token(current);
		if (peek) free_token(peek);
		parser->error_message = strdup(error_msg);
		parser->error = true;
		return;
	}
	if (peek->type == TOKEN_ERROR) {
		char error_msg[256];
		snprintf(error_msg, sizeof(error_msg), "Lexer error at initialization: %s (line %d, column %d)", 
			peek->text ? peek->text : "unknown error", peek->line, peek->column);
		free_token(current);
		free_token(peek);
		parser->error_message = strdup(error_msg);
		parser->error = true;
		return;
	}

	parser->current_token = *current;
	if (current->text) {
	   parser->current_token.text = strdup(current->text);
	} else {
		parser->current_token.text = NULL;
	}

	parser->peek_token = *peek;
	if (peek->text) {
		parser->peek_token.text = strdup(peek->text);
	} else {
		parser->peek_token.text = NULL;
	}

	free_token(current);
	free_token(peek);
}

void free_parser(Parser* parser) {
	if (parser->error_message) {
		free(parser->error_message);
		parser->error_message = NULL;
	}

	if (parser->current_token.text) {
		free(parser->current_token.text);
		parser->current_token.text = NULL;
	}
	if (parser->peek_token.text) {
		free(parser->peek_token.text);
		parser->peek_token.text = NULL;
	}
}

const char* get_error_message(int error_code) {
	if (error_code >= 0 && error_code < sizeof(ParserErrorMessages) / sizeof(ParserErrorMessages[0])) {
		return ParserErrorMessages[error_code];
	}
	return "Unknown error";
}

bool match(Parser* parser, TokenType type) {
	if (parser->current_token.type == type) {
		if (parser->current_token.text) {
			free(parser->current_token.text);
			parser->current_token.text = NULL;
		}
		parser->current_token = parser->peek_token;
		parser->peek_token.text = NULL;
		
		Token* t = next_token(parser->lexer);
		if (t == NULL) {
			parser->peek_token.type = TOKEN_EOF;
			parser->peek_token.text = NULL;
		} else {
			parser->peek_token = *t;
			if (t->text) {
				parser->peek_token.text = strdup(t->text);
			} else {
				parser->peek_token.text = NULL;
			}
			free_token(t);
		}
		return true;
	}
	return false;
}

bool expect(Parser* parser, TokenType type, int error_msg, ...) {
	va_list args;
	va_start(args, error_msg);
	if (parser->current_token.type == type) {
		if (parser->current_token.text) {
			free(parser->current_token.text);
			parser->current_token.text = NULL;
		}
		parser->current_token = parser->peek_token;
		parser->peek_token.text = NULL;

		Token* t = next_token(parser->lexer);
		if (t == NULL) {
			parser->peek_token.type = TOKEN_EOF;
			parser->peek_token.text = NULL;
			va_end(args);
			return false;
		}
		parser->peek_token = *t;
		if (t->text) {
			parser->peek_token.text = strdup(t->text);
			t->text = NULL;
		}
		free_token(t);
		va_end(args);
		return true;
	}

	const char* error_format = get_error_message(error_msg);
	
	va_list args_copy;
	va_copy(args_copy, args);
	int f = vsnprintf(NULL, 0, error_format, args);
	char* formatted = malloc(f + 1);
	if (formatted == NULL) {
		parser->error_message = NULL;
		parser->error = true;
		va_end(args_copy);
		va_end(args);
		return false;
	}
	vsnprintf(formatted, f + 1, error_format, args_copy);
	va_end(args_copy);
	va_end(args);

	parser->error_message = formatted;
	parser->error = true;
	return false;
}

bool peek_is(Parser* parser, TokenType type) {
	TokenType current_type = parser->peek_token.type;
	if (current_type == type) {
		return true;
	}
	return false;
}

void set_error(Parser* parser, int error_code, ...) {
	if (parser->error) return;
	
	free(parser->error_message);
	
	va_list args;
	va_start(args, error_code);

	const char* fmt = get_error_message(error_code);

	va_list args_copy;
	va_copy(args_copy, args);

	int f = vsnprintf(NULL, 0, fmt, args);
	char* formatted = malloc(f + 1);
	if (formatted == NULL) {
		parser->error_message = NULL;
		parser->error = true;
		va_end(args_copy);
		va_end(args);
		return;
	}
	vsnprintf(formatted, f + 1, fmt, args_copy);

	va_end(args_copy);
	va_end(args);

	parser->error_message = formatted;

	parser->error = true;
}

ASTNode* create_ast_node(ASTNodeType type, Token token) {
	ASTNode* node = malloc(sizeof(ASTNode));
	if (node == NULL) {
		set_error(NULL, PARSER_ALLOCATION_FAILURE, "AST node");
		return NULL;
	}
	node->type = type;
	node->token.type = token.type;
	node->token.line = token.line;
	node->token.column = token.column;
	if (token.text) {
		node->token.text = strdup(token.text);
	} else {
		node->token.text = NULL;
	}
	node->child_count = 0;
	node->children = NULL;
	node->annotated_type = TYPE_UNKNOWN;
	return node;
}

ASTNode* parse_statement(Parser* parser) { 
	Token current_token = parser->current_token;

	switch(parser->current_token.type)
	{
		case TOKEN_IDENTIFIER:
				switch(parser->peek_token.type) {
				case TOKEN_TYPE_DECL:
					return parse_declaration(parser);
					break;
					case TOKEN_ASSIGN:
					case TOKEN_ADD_IMMEDIATE:
					case TOKEN_SUB_IMMEDIATE:
					case TOKEN_MUL_IMMEDIATE:
					case TOKEN_DIV_IMMEDIATE:
					case TOKEN_MOD_IMMEDIATE:
					return parse_assignment(parser);
					break;
				case TOKEN_LPAREN:
					return parse_function_call(parser);
					break;
				default:
					return parse_expression(parser);
					break;
			}
			break;

		case TOKEN_IF:
			return parse_if_statement(parser);
			break;
		case TOKEN_WHILE:
			return parse_while_statement(parser);
			break;
		case TOKEN_FOR:
			return parse_for_statement(parser);
			break;
		case TOKEN_BREAK:
			return parse_break_statement(parser);
			break;
		case TOKEN_RETURN:
			return parse_return_statement(parser);
			break;
		case TOKEN_PROGRAM:
			return parse_program(parser);
			break;
		case TOKEN_INCLUDE:
			return parse_include_statement(parser);
			break;

		case TOKEN_SINGLE_COMMENT:
			return parse_single_comment(parser);
			break;
		
		case TOKEN_INT_LITERAL:
		case TOKEN_FLOAT_LITERAL:
		case TOKEN_STRING:
		case TOKEN_TRUE:
		case TOKEN_FALSE:
		case TOKEN_NULL:
		case TOKEN_LPAREN:
			return parse_expression(parser);
			break;

		default:
			set_error(parser, PARSER_UNEXPECTED_TOKEN, current_token.text);
			return NULL;
	}
}

static ASTNode* parse_single_comment(Parser* parser) {
	ASTNode* node = create_ast_node(AST_SINGLE_COMMENT, parser->current_token);
	if (!match(parser, TOKEN_SINGLE_COMMENT)) {
		set_error(parser, PARSER_UNEXPECTED_TOKEN, parser->current_token.text);
		return NULL;
	}
	return node;
}

ASTNode* parse_break_statement(Parser* parser) {
	ASTNode* node = create_ast_node(AST_BREAK, parser->current_token);
	if (!expect(parser, TOKEN_BREAK, PARSER_EXPECTED, "'break'", parser->current_token.text)) {
		return NULL;
	}
	if (!expect(parser, TOKEN_SEMICOLON, PARSER_EXPECTED, "';'' after 'break'", parser->current_token.text)) {
		return NULL;
	}
	return node;
}

ASTNode* parse_return_statement(Parser* parser) {
	ASTNode* node = create_ast_node(AST_RETURN, parser->current_token);
	if (!expect(parser, TOKEN_RETURN, PARSER_EXPECTED, "'return'", parser->current_token.text)) {
		return NULL;
	}

	if (parser->current_token.type != TOKEN_SEMICOLON) {
		ASTNode* expr = parse_expression(parser);
		if (!expr) {
			set_error(parser, PARSER_EXPECTED, "'return'", parser->current_token.text);
			return NULL;
		}
		add_child(node, expr);
	}

	if (!expect(parser, TOKEN_SEMICOLON, PARSER_EXPECTED, "';'' after 'return'", parser->current_token.text)) {
		return NULL;
	}

	return node;
}

ASTNode* parse_file(Parser* parser) {
	ASTNode* file_node = create_ast_node(AST_FILE, parser->current_token);
	int include_count = 0;
	ASTNode** includes = NULL;
	
	while (parser->current_token.type == TOKEN_INCLUDE) {
		ASTNode* include = parse_include_statement(parser);
		if (!include) {
			for (int i = 0; i < include_count; i++) {
				free_ast(includes[i]);
			}
			free(includes);
			free(file_node);
			return NULL;
		}
		
		ASTNode** temp = realloc(includes, sizeof(ASTNode*) * (include_count + 1));
		if (!temp) {
			free_ast(include);
			for (int i = 0; i < include_count; i++) {
				free_ast(includes[i]);
			}
			free(includes);
			free(file_node);
			return NULL;
		}
		includes = temp;
		includes[include_count++] = include;
	}
	
	int declaration_count = 0;
	ASTNode** declarations = NULL;

	int program_count = 0;
	ASTNode** programs = NULL;
	
	// Accept top-level declarations (e.g. global variables) before programs
	while (parser->current_token.type == TOKEN_IDENTIFIER && parser->peek_token.type == TOKEN_TYPE_DECL) {
		ASTNode* decl = parse_declaration(parser);
		if (!decl) {
			for (int i = 0; i < include_count; i++) free_ast(includes[i]);
			for (int i = 0; i < declaration_count; i++) free_ast(declarations[i]);
			free(includes);
			free(declarations);
			free(file_node);
			return NULL;
		}

		ASTNode** temp = realloc(declarations, sizeof(ASTNode*) * (declaration_count + 1));
		if (!temp) {
			free_ast(decl);
			for (int i = 0; i < include_count; i++) free_ast(includes[i]);
			for (int i = 0; i < declaration_count; i++) free_ast(declarations[i]);
			free(includes);
			free(declarations);
			free(file_node);
			return NULL;
		}
		declarations = temp;
		declarations[declaration_count++] = decl;
	}

	while (parser->current_token.type == TOKEN_PROGRAM) {
		ASTNode* program = parse_program(parser);
		if (!program) {
			for (int i = 0; i < include_count; i++) {
				free_ast(includes[i]);
			}
			for (int i = 0; i < program_count; i++) {
				free_ast(programs[i]);
			}
			free(includes);
			free(programs);
			free(file_node);
			return NULL;
		}
		
		ASTNode** temp = realloc(programs, sizeof(ASTNode*) * (program_count + 1));
		if (!temp) {
			free_ast(program);
			for (int i = 0; i < include_count; i++) {
				free_ast(includes[i]);
			}
			for (int i = 0; i < program_count; i++) {
				free_ast(programs[i]);
			}
			free(includes);
			free(programs);
			free(file_node);
			return NULL;
		}
		programs = temp;
		programs[program_count++] = program;
	}
	
	if (program_count == 0) {
		for (int i = 0; i < include_count; i++) {
			free_ast(includes[i]);
		}
		for (int i = 0; i < declaration_count; i++) {
			free_ast(declarations[i]);
		}
		free(includes);
		free(file_node);
		set_error(parser, PARSER_EXPECTED, "at least one program function", parser->current_token.text);
		return NULL;
	}
	
	file_node->child_count = include_count + declaration_count + program_count;
	file_node->children = malloc(sizeof(ASTNode*) * file_node->child_count);
	if (!file_node->children) {
		for (int i = 0; i < include_count; i++) {
			free_ast(includes[i]);
		}
		for (int i = 0; i < program_count; i++) {
			free_ast(programs[i]);
		}
		free(includes);
		free(programs);
		free(file_node);
		return NULL;
	}
	
	int idx = 0;
	for (int i = 0; i < include_count; i++) {
		file_node->children[i] = includes[i];
		idx++;
	}
	for (int i = 0; i < declaration_count; i++) {
		file_node->children[idx++] = declarations[i];
	}
	for (int i = 0; i < program_count; i++) {
		file_node->children[idx++] = programs[i];
	}
	
	free(includes);
	free(declarations);
	free(programs);
	return file_node;
}


ASTNode* parse_program(Parser* parser) {
	ASTNode* parse_node = create_ast_node(AST_PROGRAM, parser->current_token);

	if (!expect(parser, TOKEN_PROGRAM, PARSER_EXPECTED, "keyword 'program'", parser->current_token.text)) return NULL;
	if (!expect(parser, TOKEN_TYPE_DECL, PARSER_EXPECTED, "type declarator '::' when defining a type", parser->current_token.text)) return NULL;

	ASTNode* type = create_ast_node(AST_TYPE, parser->current_token);
	if (!match(parser, TOKEN_INT) && !match(parser, TOKEN_VOID) &&
		!match(parser, TOKEN_CHAR) && !match(parser, TOKEN_FLOAT) &&
		!match(parser, TOKEN_BOOLEAN) && !match(parser, TOKEN_STRING)) {
			set_error(parser, PARSER_EXPECTED, "type", parser->current_token.text);
			return NULL;
	}

	ASTNode* identifier = parse_identifier(parser);
	if (!identifier) {
		set_error(parser, PARSER_EXPECTED, "identifier", parser->current_token.text);
		return NULL;
	}

	ASTNode* params = parse_params(parser);
	if (!params) {
		set_error(parser, PARSER_EXPECTED, "parameters or at least an empty set of parenthesis ('( )')", parser->current_token.text);
		return NULL;
	}

	ASTNode* block = parse_block(parser);
	if (!block) {
		set_error(parser, PARSER_EXPECTED, "code block or at least an empty set of braces ('{ }')", parser->current_token.text);
		return NULL;
	}

	parse_node->child_count = 4;
	parse_node->children = malloc(sizeof(ASTNode*) * parse_node->child_count);
	parse_node->children[0] = type;
	parse_node->children[1] = identifier;
	parse_node->children[2] = params;
	parse_node->children[3] = block;

	return parse_node;
}

ASTNode* parse_params(Parser* parser) {
	ASTNode* node = create_ast_node(AST_PARAMS, parser->current_token);
	if (!expect(parser, TOKEN_LPAREN, PARSER_EXPECTED, "'('", parser->current_token.text)) return NULL;

	ASTNode** params = NULL;
	int count = 0;

	if (parser->current_token.type != TOKEN_RPAREN) {
		while (1) {
			Token id = parser->current_token;
			if (!expect(parser, TOKEN_IDENTIFIER, PARSER_EXPECTED, "parameter name", parser->current_token.text)) {
				return NULL;
			}
			if (!expect(parser, TOKEN_TYPE_DECL, PARSER_EXPECTED, "'::' after parameter name", parser->current_token.text)) {
				return NULL;
			}

			Token type = parser->current_token;
			if (!match(parser, TOKEN_INT) && !match(parser, TOKEN_FLOAT) &&
				!match(parser, TOKEN_STRING) && !match(parser, TOKEN_BOOLEAN) &&
				!match(parser, TOKEN_CHAR) && !match(parser, TOKEN_NULL) &&
				!match(parser, TOKEN_VOID)) {
				set_error(parser, PARSER_EXPECTED, "type declaration for parameter", parser->current_token.text);
				return NULL;
			}

			ASTNode* id_node = create_ast_node(AST_IDENTIFIER, id);
			ASTNode* param_node = create_ast_node(AST_TYPE, type);
			if (!id_node || !param_node) {
				set_error(parser, PARSER_FAILED_AST, "parameter");
				return NULL;
			}

			ASTNode* assign = create_ast_node(AST_ASSIGNMENT, id);
			assign->child_count = 2;
			assign->children = malloc(sizeof(ASTNode*) * 2);
			assign->children[0] = id_node;
			assign->children[1] = param_node;

			ASTNode** tmp = realloc(params, sizeof(ASTNode*) * (count + 1));
			if (!tmp) {
				set_error(parser, PARSER_ALLOCATION_FAILURE, "parameters");
				return NULL;
			}

			params = tmp;
			params[count] = assign;
			count++;
			
			if (parser->current_token.type == TOKEN_COMMA) {
				if (!match(parser, TOKEN_COMMA)) {
					set_error(parser, PARSER_EXPECTED, "','", parser->current_token.text);
					return NULL;
				}
				if (parser->current_token.type == TOKEN_RPAREN) {
					set_error(parser, PARSER_TRAILING_COMMA);
					return NULL;
				}
				continue;
			}
			break;
		}
	}
	if (!expect(parser, TOKEN_RPAREN, PARSER_EXPECTED, "')'", parser->current_token.text)) return NULL;

	node->child_count = count;
	node->children = params;
	return node;
}

ASTNode* parse_declaration(Parser* parser) {
	Token identifier_token = parser->current_token;
	if (identifier_token.text) {
		identifier_token.text = strdup(identifier_token.text);
	}

	if (!expect(parser, TOKEN_IDENTIFIER, PARSER_EXPECTED, "identifier", parser->current_token.text)) {
		if (identifier_token.text) free(identifier_token.text);
		return NULL;
	}
	if (!expect(parser, TOKEN_TYPE_DECL, PARSER_EXPECTED, "'::'", parser->current_token.text)) {
		if (identifier_token.text) free(identifier_token.text);
		return NULL;
	}

	Token type_token = parser->current_token;
	if (type_token.text) {
		type_token.text = strdup(type_token.text);
	}
	
	if (!match(parser, TOKEN_INT) && !match(parser, TOKEN_FLOAT) &&
		!match(parser, TOKEN_STRING) && !match(parser, TOKEN_BOOLEAN) &&
		!match(parser, TOKEN_CHAR) && !match(parser, TOKEN_NULL) &&
		!match(parser, TOKEN_VOID)) {
			if (identifier_token.text) free(identifier_token.text);
			if (type_token.text) free(type_token.text);
			set_error(parser, PARSER_EXPECTED, "type declaration", parser->current_token.text);
			return NULL;
	}

	ASTNode* identifier = create_ast_node(AST_IDENTIFIER, identifier_token);
	ASTNode* type = create_ast_node(AST_TYPE, type_token);

	if (!identifier || !type) 
	{
		set_error(parser, PARSER_FAILED_AST, "assignment AST nodes");
		return NULL;
	}

	ASTNode* assignment_node = create_ast_node(AST_DECLARATION, identifier_token);

	if (parser->current_token.type == TOKEN_ASSIGN) {
		match(parser, TOKEN_ASSIGN);

		ASTNode* expression = parse_expression(parser);
		if (!expression) {
			set_error(parser, PARSER_EXPECTED, "expression", parser->current_token.text);
			free_ast(identifier);
			free_ast(type);
			free_ast(assignment_node);
			return NULL;
		}

		if (!expect(parser, TOKEN_SEMICOLON, PARSER_EXPECTED, "';'", parser->current_token.text)) {
			free_ast(identifier);
			free_ast(type);
			free_ast(expression);
			free_ast(assignment_node);
			return NULL;
		}

		assignment_node->child_count = 3;
		assignment_node->children = malloc(sizeof(ASTNode*) * 3);
		assignment_node->children[0] = identifier;
		assignment_node->children[1] = type;
		assignment_node->children[2] = expression;
	} else {
		if (!expect(parser, TOKEN_SEMICOLON, PARSER_EXPECTED, "';'", parser->current_token.text)) {
			free_ast(identifier);
			free_ast(type);
			free_ast(assignment_node);
			return NULL;
		}

		assignment_node->child_count = 2;
		assignment_node->children = malloc(sizeof(ASTNode*) * 2);
		assignment_node->children[0] = identifier;
		assignment_node->children[1] = type;
	}

	return assignment_node;
}

ASTNode* parse_assignment(Parser* parser) {
	Token identifier_token = parser->current_token;
	// Copy the token text to avoid it being overwritten when parser advances
	if (identifier_token.text) {
		identifier_token.text = strdup(identifier_token.text);
	}

	if (!expect(parser, TOKEN_IDENTIFIER, PARSER_EXPECTED, "identifier", parser->current_token.text)) {
		if (identifier_token.text) free(identifier_token.text);
		return NULL;
	}

	ASTNode* identifier = create_ast_node(AST_IDENTIFIER, identifier_token);
	ASTNode* assignment_node = create_ast_node(AST_ASSIGNMENT, identifier_token);

	if (!identifier || !assignment_node) {
		set_error(parser, PARSER_FAILED_AST, "assignment AST nodes");
		return NULL;
	}

	// Accept either a plain assignment '=' or compound immediate assignments
	// like '+=', '-=', '*=', '/=', '%=' which are emitted by the lexer as
	// TOKEN_*_IMMEDIATE tokens.
	TokenType next = parser->current_token.type;

	// Plain assignment
	if (next == TOKEN_ASSIGN) {
		match(parser, TOKEN_ASSIGN);

		ASTNode* expression = parse_expression(parser);
		if (!expression) {
			set_error(parser, PARSER_EXPECTED, "expression", parser->current_token.text);
			free_ast(identifier);
			free_ast(assignment_node);
			return NULL;
		}

		if (!expect(parser, TOKEN_SEMICOLON, PARSER_EXPECTED, "';'", parser->current_token.text)) {
			free_ast(identifier);
			free_ast(expression);
			free_ast(assignment_node);
			return NULL;
		}

		assignment_node->child_count = 2;
		assignment_node->children = malloc(sizeof(ASTNode*) * 2);
		if (!assignment_node->children) {
			free_ast(identifier);
			free_ast(expression);
			free_ast(assignment_node);
			return NULL;
		}

		assignment_node->children[0] = identifier;
		assignment_node->children[1] = expression;

		return assignment_node;
	}

	// Compound immediate assignment (e.g., i %= 2) - translate to an assignment
	// where the RHS is a binary operation combining the identifier and the
	// provided expression (i.e., i = i % expr).
	if (next == TOKEN_ADD_IMMEDIATE || next == TOKEN_SUB_IMMEDIATE || next == TOKEN_MUL_IMMEDIATE || next == TOKEN_DIV_IMMEDIATE || next == TOKEN_MOD_IMMEDIATE) {
		Token op_token = parser->current_token;
		match(parser, next);

		ASTNode* rhs = parse_expression(parser);
		if (!rhs) {
			set_error(parser, PARSER_EXPECTED, "expression after compound assignment", parser->current_token.text);
			free_ast(identifier);
			free_ast(assignment_node);
			return NULL;
		}

		if (!expect(parser, TOKEN_SEMICOLON, PARSER_EXPECTED, "';'", parser->current_token.text)) {
			free_ast(identifier);
			free_ast(rhs);
			free_ast(assignment_node);
			return NULL;
		}

		// Map compound immediate token to binary operator token
		Token bin_token = {0};
		switch (op_token.type) {
			case TOKEN_ADD_IMMEDIATE: bin_token.type = TOKEN_PLUS; bin_token.text = "+"; break;
			case TOKEN_SUB_IMMEDIATE: bin_token.type = TOKEN_MINUS; bin_token.text = "-"; break;
			case TOKEN_MUL_IMMEDIATE: bin_token.type = TOKEN_ASTERISK; bin_token.text = "*"; break;
			case TOKEN_DIV_IMMEDIATE: bin_token.type = TOKEN_SLASH; bin_token.text = "/"; break;
			case TOKEN_MOD_IMMEDIATE: bin_token.type = TOKEN_PERCENT; bin_token.text = "%"; break;
			default: free_ast(identifier); free_ast(rhs); free_ast(assignment_node); return NULL;
		}

		ASTNode* bin = create_ast_node(AST_BINARY_OP, bin_token);
		bin->child_count = 2;
		bin->children = malloc(sizeof(ASTNode*) * 2);
		bin->children[0] = identifier; // left operand is the LHS identifier
		bin->children[1] = rhs;

		assignment_node->child_count = 2;
		assignment_node->children = malloc(sizeof(ASTNode*) * 2);
		assignment_node->children[0] = create_ast_node(AST_IDENTIFIER, identifier->token);
		assignment_node->children[1] = bin;

		return assignment_node;
	}

	set_error(parser, PARSER_EXPECTED, "'=' or compound assignment", parser->current_token.text);
	free_ast(identifier);
	free_ast(assignment_node);
	return NULL;
}

ASTNode* parse_expression(Parser* parser) {
	return parse_binary(parser);
}

int get_node_precedence(ASTNode* node) {
	if (!node) return -1;

	switch (node->token.type) {
		case TOKEN_CAROT: // ^
			return 4;

		case TOKEN_ASTERISK: // *
		case TOKEN_SLASH: // /
		case TOKEN_PERCENT: // %
			return 3;
		
		case TOKEN_PLUS: // +
		case TOKEN_MINUS: // -
			return 2;
		
		default:
			return -1;
	}
}

// 
//  Supported operators:
//   *, +, -, /, ^, %
// 
ASTNode* parse_binary(Parser* parser) {
	ASTNode* left = parse_primary(parser);
	
	if (!left) return NULL;
	while (1) {
		TokenType op_type = parser->current_token.type;

		int precedence;
		int right_assoc = 0;

		switch (op_type) {
			case TOKEN_CAROT:
				precedence = 4;
				right_assoc = 1;
				break;
			
			case TOKEN_ASTERISK:
			case TOKEN_SLASH:
			case TOKEN_PERCENT:
				precedence = 3;
				break;
			
			case TOKEN_PLUS:
			case TOKEN_MINUS:
				precedence = 2;
				break;
			
			default:
				return left;
		}

		if (!right_assoc && precedence < get_node_precedence(left)) break;
		if (right_assoc && precedence <= get_node_precedence(left)) break;

		Token op_token = parser->current_token;
		match(parser, op_type);

		ASTNode* right = parse_primary(parser);
		if (!right) {
			set_error(parser, PARSER_EXPECTED, "expression after '%s'", op_token.text);
			return left;
		}

		ASTNode* new_node = create_ast_node(AST_BINARY_OP, op_token);
		
		new_node->child_count = 2;
		new_node->children = malloc(sizeof(ASTNode*) * 2);
		new_node->children[0] = left;
		new_node->children[1] = right;

		left = new_node;
	}

	return left;
}

// 
//  Supported operators:
//   -, !
// 
ASTNode* parse_unary(Parser* parser) {
	TokenType op_type = parser->current_token.type;

	if (op_type == TOKEN_MINUS || op_type == TOKEN_NOT) {
		Token op_token = parser->current_token;
		match(parser, op_type);

		ASTNode* operand = parse_unary(parser);
		if (!operand) {
			set_error(parser, PARSER_EXPECTED, "expression after unary operator '%s'", op_token.text);
			return NULL;
		}

		ASTNode* node = create_ast_node(AST_UNARY_OP, op_token);
		
		node->child_count = 1;
		node->children = malloc(sizeof(ASTNode*));
		node->children[0] = operand;

		return node;
	}

	return parse_primary(parser);
}

ASTNode* parse_if_statement(Parser* parser) {
	ASTNode* if_node = create_ast_node(AST_IF, parser->current_token);

	if (!expect(parser, TOKEN_IF, PARSER_EXPECTED, "'if'", parser->current_token.text)) return NULL;
	if (!expect(parser, TOKEN_LPAREN, PARSER_EXPECTED, "'('", parser->current_token.text)) return NULL;

	ASTNode* left = parse_statement(parser);
	if (!left) {
		set_error(parser, PARSER_EXPECTED, "expression in if condition", parser->current_token.text);
		return NULL;
	}

	ASTNode* condition = NULL;

	if (parser->current_token.type == TOKEN_RPAREN) {
		condition = left;
	} else {
		Token op = parser->current_token;
		TokenType t = op.type;

		if (t != TOKEN_EQUALS && t != TOKEN_GREATER &&
			t != TOKEN_LESS && t != TOKEN_GREATER_EQUALS &&
			t != TOKEN_LESS_EQUALS && t != TOKEN_NOT_EQUALS &&
			t != TOKEN_AND) {
				set_error(parser, PARSER_EXPECTED, "comparison operator", parser->current_token.text);
				return NULL;
		}
		match(parser, t);

		ASTNode* right = parse_statement(parser);
		if (!right) {
			set_error(parser, PARSER_EXPECTED, "expression in if condition", parser->current_token.text);
			return NULL;
		}

		condition = create_ast_node(AST_COMPARISON, op);
		condition->child_count = 2;
		condition->children = malloc(sizeof(ASTNode*) * condition->child_count);
		condition->children[0] = left;
		condition->children[1] = right;
	}

	if (!expect(parser, TOKEN_RPAREN, PARSER_EXPECTED, "')'", parser->current_token.text)) return NULL;

	ASTNode* then_block = parse_block(parser);

	if (match(parser, TOKEN_ELSE)) {
		if_node->child_count = 3;
		if_node->children = malloc(sizeof(ASTNode*) * 3);
		if_node->children[0] = condition;
		if_node->children[1] = then_block;

		if (parser->current_token.type == TOKEN_IF) {
			if_node->children[2] = parse_if_statement(parser);
		} else {
			ASTNode* else_block = parse_block(parser);
			if_node->children[2] = else_block;
		}
	} else {
		if_node->child_count = 2;
		if_node->children = malloc(sizeof(ASTNode*) * 2);
		if_node->children[0] = condition;
		if_node->children[1] = then_block;
	}

	return if_node;
}


ASTNode* parse_while_statement(Parser* parser) {
	ASTNode* while_node = create_ast_node(AST_WHILE, parser->current_token);

	if (!expect(parser, TOKEN_WHILE, PARSER_EXPECTED, "'while'", parser->current_token.text)) return NULL;
	if (!expect(parser, TOKEN_LPAREN, PARSER_EXPECTED, "'('", parser->current_token.text)) return NULL;

	ASTNode* left = parse_statement(parser);
	if (!left) {
		set_error(parser, PARSER_EXPECTED, "expression in while condition", parser->current_token.text);
		return NULL;
	}

	ASTNode* condition = NULL;
